@@ -44,7 +44,7 @@ namespace kt
 		setPluginsEnabled(false);
 		setStatusMessagesEnabled(false);
 		KParts::BrowserExtension* ext = this->browserExtension();
-		connect(ext,SIGNAL(openUrlRequest(const KUrl &, const KParts::OpenUrlArguments &, const KParts::BrowserArguments &)),
+		connect(ext,SIGNAL(openUrlRequestDelayed(const KUrl &, const KParts::OpenUrlArguments &, const KParts::BrowserArguments &)),
 				this,SLOT(openUrlRequest(const KUrl&,const KParts::OpenUrlArguments & , const KParts::BrowserArguments &)));
 	
 		ext->enableAction("copy",true);
@@ -67,15 +67,23 @@ namespace kt
 	
 	void HTMLPart::openUrlRequest(const KUrl &u, const KParts::OpenUrlArguments & arg, const KParts::BrowserArguments & barg)
 	{
-		Q_UNUSED(arg);
-		Q_UNUSED(barg);
 		if (active_job)
 		{
 			active_job->kill();
 			active_job = 0;
 		}
 		
-		KIO::TransferJob* j = KIO::get(u, KIO::NoReload, KIO::HideProgressInfo);
+		
+		KIO::TransferJob* j = 0;
+		if (barg.doPost())
+		{
+			j = KIO::http_post(u,barg.postData,KIO::HideProgressInfo);
+			j->addMetaData("content-type",barg.contentType());
+		}
+		else
+		{
+			j = KIO::get(u, KIO::NoReload, KIO::HideProgressInfo);
+		}
 		connect(j,SIGNAL(data(KIO::Job*,const QByteArray &)),
 				this,SLOT(dataReceived(KIO::Job*, const QByteArray& )));
 		connect(j,SIGNAL(result(KJob*)),this,SLOT(jobDone(KJob* )));
